--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daal Tadka - Premium Organic Pulses</title>
     <meta name="description" content="High-quality unpolished organic pulses and authentic spices from Daal Tadka. Freshly delivered across Bangalore." />
