--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta property="og:title" content="Daal Tadka - Premium Organic Pulses" />
     <meta property="og:description" content="High-quality unpolished organic pulses and authentic spices from Daal Tadka. Freshly delivered across Bangalore." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/images/og-image.png" />
+    <meta property="og:image" content="/images/logo-main.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/images/og-image.png" />
+    <meta name="twitter:image" content="/images/logo-main.png" />
   </head>
 
   <body>
